Remove special characters in properties

--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,14 +1,13 @@
 spring.application.name=demo
-# C?ng ch?y server
-server.port=8080
+server.port=${PORT:8080}
 
-# K?t n?i MySQL (Database tên là flashcard_app)
+# Database Configuration
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASS}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# C?u hình JPA (Hibernate)
+# JPA Configuration
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
